# advent

./: .gitignore  readme.org
10/: solve.rb
11/: advent.cabal  default.nix  result
11/lib/: Eleven.hs  Fifteen.hs  Fourteen.hs  Sixteen.hs  Twelve.hs
11/test/: ElevenTest.hs  FifteenTest.hs  FourteenTest.hs  SixteenTest.hs
15/: Day 15 - Advent of Code 2020.html
16/: Day 16 - Advent of Code 2020.html
17/: Day 17 - Advent of Code 2020.html
17/seventeen/: Cargo.toml
17/seventeen/src/: four_d.rs  lib.rs  three_d.rs
17/seventeen/tests/: four_d.rs
2/: prt2.rb
20/twenty/: Cargo.toml
20/twenty/src/: lib.rs
20/twenty/tests/: test.rs
2020/10/: solve.rb
2020/10/spec/: solve_spec.rb
2020/13/: Day 13 - Advent of Code 2020.html
2020/17/seventeen/src/: lib.rs  three_d.rs
2020/17/seventeen/tests/: three_d.rs
2020/18/: Day 18 - Advent of Code 2020.html  links
2020/19/: Day 18 - Advent of Code 2020.html
2020/2/: do.rb  prt1.rb  prt2.rb
2020/20/twenty/: Cargo.toml  rustfmt.toml
2020/20/twenty/src/: lib.rs
2020/20/twenty/tests/: test.rs
2020/3/: prt1.rb
2020/3/spec/: prt1_spec.rb
2020/4/: solve_2.rb
2020/4/spec/: solve_2_spec.rb
2020/5/: solve.rb
2020/6/: solve.rb
2020/7/: solve.rb
2020/7/spec/: solve_spec.rb
2020/9/: person_714284.tmp.json
2020/9/spec/: solve_spec.rb
2020/haskell/: .tool-versions  advent.cabal
2020/haskell/11/: Day 11 - Advent of Code 2020.html
2020/haskell/12/: Day 12 - Advent of Code 2020.html
2020/haskell/14/: Day 14 - Advent of Code 2020.html
2020/haskell/executable/: ElevenRun.hs  FifteenRun.hs  FourteenRun.hs  TwelveRun.hs
2020/haskell/lib/: Eleven.hs  Fourteen.hs  Main.hs  Twelve.hs  Util.hs
2020/haskell/test/: .dir-locals.el  AdventTest.hs  ElevenTest.hs  FourteenTest.hs  TwelveTest.hs
3/: prt1.rb
3/spec/: prt1_spec.rb
4/: solve_1.rb  solve_2.rb
4/spec/: solve_1_spec.rb
5/: solve.rb
5/spec/: prt1_spec.rb
6/: solve.rb
6/spec/: solve_spec.rb
7/: solve.rb
8/: solve.rb
8/spec/: solve_spec.rb
9/: solve.rb
