cabal-version:      3.0
name:               advent
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             jesse hanley
maintainer:         goosetherumfoodle@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Main, Eleven, Twelve, Fourteen, Fifteen, Sixteen

    ghc-options: -Weverything -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-prepositive-qualified-module -Wno-missing-deriving-strategies

    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
                      , QuasiQuotes
                      , StrictData

    build-depends:    base ^>=4.14.3.0
                    , protolude
                    , text
                    , containers
                    , hashable
                    , vector
                    , regex-tdfa
                    , ilist
                    , trifecta
                    , either
                    , primitive

    -- Modules included in this library but not exported.
    other-modules: Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite advent-test
    ghc-options: -Weverything -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-missing-export-lists -Wprepositive-qualified-module -Wno-prepositive-qualified-module
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          AdventTest.hs
    other-modules:    ElevenTest, TwelveTest, FourteenTest, FifteenTest, SixteenTest
    build-depends:    base ^>=4.14.3.0
                    , advent
                    , protolude
                    , hspec
                    , raw-strings-qq
                    , hspec-expectations-pretty-diff
                    , vector
                    , containers
                    , QuickCheck

    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
                      , QuasiQuotes

    ghc-options: -main-is AdventTest

executable fifteen
  main-is: FifteenRun.hs
  hs-source-dirs:
      executable
  ghc-options: -Wall -main-is FifteenRun -O2 -rtsopts -threaded -with-rtsopts=-N
  split-sections: true
  build-depends:
      base
    , advent
    , protolude
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
